<?xml version="1.0"?>
<package format="2">
  <name>yhs_nav</name>
  <version>0.0.0</version>
  <description>The yhs_nav package</description>

  <maintainer email="zhengxg178@163.com">Your Name</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
</package>
